--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 
   <!-- Your code here -->
 
+<img src="https://pngimg.com/uploads/duck/duck_PNG4998.png">
+<img src="https://pngimg.com/uploads/duck/duck_PNG5006.png" alt="duck lookin' real suave">
+<img src="https://www.vhv.rs/dpng/d/439-4397677_goose-free-png-images-canadian-goose-clipart-transparent.png" alt="goosey-boi" title="Honk, honk.">
 </body>
 </html>
